--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -16,10 +16,11 @@ body {
   margin: 0 auto;
 }
 footer {
-  width: 100%;
-  height: 100%;
-    left: 0;
-    bottom: 0;
+  position:absolute;
+    bottom:25%;
+    width:100%;
+    height:60px;   /* Height of the footer */
+    background:#6cf;
 }
 
 
@@ -75,6 +76,7 @@ input {
     -webkit-animation: spin 2s linear infinite;
     animation: spin 2s linear infinite;
     }
+ 
 
     @-webkit-keyframes spin {
         0% {-webkit-transform: rotate(0deg);
