--- a/src/main/resources/templates/fragments/module.html
+++ b/src/main/resources/templates/fragments/module.html
@@ -51,6 +51,9 @@
         <li class="nav-item">
           <a class="nav-link" href="dictionary">사전</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="wordRank">사전랭킹</a>
+        </li>
       </ul>
     </div>
    </h5>
