--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,6 +1,10 @@
 @charset "UTF-8";
 @import url(//fonts.googleapis.com/earlyaccess/nanumgothic.css);
 
+.allBlur{
+  filter: blur(10px);
+  -webkit-filter: blur(10px);
+}
 
 header{
   position:fixed;
@@ -10,6 +14,7 @@ header{
   color:white;
   text-align:center;
   top:0;left:0;
+  
 }
 
 body {
@@ -62,6 +67,8 @@ input {
       color: skyblue;
       padding: 5px;
   }
+
+  /* 스피너 */
 .loader {
     position: absolute;
     left: 50%;
@@ -75,7 +82,21 @@ input {
     width: 120px; height: 120px;
     -webkit-animation: spin 2s linear infinite;
     animation: spin 2s linear infinite;
+    /* 레이어 설정인거같음, 블러처리할때 스피너가 위로가도록 설정 */
+    z-index: 1500;
     }
+    /* 블러처리 */
+    .spinner_overlay {
+
+      position: fixed;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgb(0, 0, 0);
+      opacity: 0.5;
+      z-index: 1000;
+  }
  
 
     @-webkit-keyframes spin {
