사전에도블러처리,footer오류수정

--- a/src/main/resources/templates/dictionary.html
+++ b/src/main/resources/templates/dictionary.html
@@ -20,6 +20,7 @@
    <div id="spinner" style="display:none">
     <!--loader는 회전하는 그림, css 에서 정리해놈 -->
     <div class="loader"></div>
+    <div class="spinner_overlay"></div>
 
 </div>
     </script>
