사전랭킹페이지html작업완료

--- a/src/main/resources/templates/wordRank.html
+++ b/src/main/resources/templates/wordRank.html
@@ -11,8 +11,39 @@
   </header>
   <!-- body 부분-->
   <body>
-
+<!-- create table -->
+<br>
+<br>
+<br>
+<div class="tabWrap">
+	<ul class="tab_Menu">
+		<li class="tabMenu current">
+			<a href="#tabContent01" >Daily</a>
+		</li>
+		<li class="tabMenu">
+			<a href="#tabContent02" >Week</a>
+		</li>
+		<li class="tabMenu">
+			<a href="#tabContent03" >Month</a>
+		</li>
+	</ul>
+	<div class="tab_Content_Wrap">
+		<div id="tabContent01" class="tabPage">
+			Tab1 Content
+		</div>
+		<div id="tabContent02" class="tabPage">
+			Tab2 Content
+		</div>
+		<div id="tabContent03" class="tabPage">
+			Tab3 Content
+		</div>
+	</div>
+</div>
+</div>
   </body>
+  <script type="text/JavaScript" src="/js/RankService.js"></script>
+
+  
 
 <!-- footer 부분-->
 <footer>
