--- a/src/main/resources/templates/dictionary.html
+++ b/src/main/resources/templates/dictionary.html
@@ -2,6 +2,7 @@
 <html lang="ko">
   <!-- thymeleaf 의 fragment 기능으로 모듈화(fragments/module.html) 참고링크 http://yoonbumtae.com/?p=2609 -->
 <head th:replace="fragments/module.html :: head">
+  <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 
 <body>
