--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <div th:replace="fragments/module.html :: head"></div>
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 <body>
 
