--- a/src/main/resources/templates/printlog.html
+++ b/src/main/resources/templates/printlog.html
@@ -4,6 +4,7 @@
 <!-- head 부분-->
 <head>
   <head th:replace="fragments/module.html :: head">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 
 <!-- header 부분-->
