--- a/src/main/resources/static/css/Rank.css
+++ b/src/main/resources/static/css/Rank.css
@@ -1,25 +1,21 @@
-.main {
+.Rankmain {
     min-width: 320px;
     max-width: 800px;
     padding: 50px;
     margin: 0 auto;
-    background: #ffffff;}
+    background: #ffffff;
+}
 
 section {
     display: none;
     padding: 20px 0 0;
-    border-top: 1px solid #ddd;}
+    border-top: 1px solid #ddd;
+}
 
 /*라디오버튼 숨김*/
-  #tab1 {
-      display: none;
-    }
-    #tab2 {
-      display: none;
-    }
-    #tab3 {
-      display: none;
-    }
+input {
+    display: none;
+}
 
 label {
     display: inline-block;
@@ -28,22 +24,25 @@ label {
     font-weight: 600;
     text-align: center;
     color: #bbb;
-    border: 1px solid transparent;}
+    border: 1px solid transparent;
+}
 
 label:hover {
     color: #2e9cdf;
     cursor: pointer;
-  }
+}
 
 /*input 클릭시, label 스타일*/
 input:checked + label {
       color: #555;
       border: 1px solid #ddd;
       border-top: 2px solid #2e9cdf;
-      border-bottom: 1px solid #ffffff;}
+      border-bottom: 1px solid #ffffff;
+    }
 
 #tab1:checked ~ #content1,
 #tab2:checked ~ #content2,
 #tab3:checked ~ #content3,
 #tab4:checked ~ #content4 {
-    display: block;}
+    display: block;
+}
