--- a/src/main/resources/static/css/Rank.css
+++ b/src/main/resources/static/css/Rank.css
@@ -1,48 +1,39 @@
-.Rankmain {
-    min-width: 320px;
-    max-width: 800px;
-    padding: 50px;
-    margin: 0 auto;
-    background: #ffffff;
+body{
+	margin-top: 100px;
+	font-family: 'Trebuchet MS', serif;
+	line-height: 1.6
+}
+.Rankmain{
+	width: 500px;
+	margin: 0 auto;
 }
 
-section {
-    display: none;
-    padding: 20px 0 0;
-    border-top: 1px solid #ddd;
+
+
+ul.tables{
+	margin: 0px;
+	padding: 0px;
+	list-style: none;
+}
+ul.tables li{
+	background: none;
+	color: #222;
+	display: inline-block;
+	padding: 10px 15px;
+	cursor: pointer;
 }
 
-/*라디오버튼 숨김*/
-input {
-    display: none;
+ul.tables li.current{
+	background: #ededed;
+	color: #222;
 }
 
-label {
-    display: inline-block;
-    margin: 0 0 -1px;
-    padding: 15px 25px;
-    font-weight: 600;
-    text-align: center;
-    color: #bbb;
-    border: 1px solid transparent;
+.tab-content{
+	display: none;
+	background: #ededed;
+	padding: 15px;
 }
 
-label:hover {
-    color: #2e9cdf;
-    cursor: pointer;
-}
-
-/*input 클릭시, label 스타일*/
-input:checked + label {
-      color: #555;
-      border: 1px solid #ddd;
-      border-top: 2px solid #2e9cdf;
-      border-bottom: 1px solid #ffffff;
-    }
-
-#tab1:checked ~ #content1,
-#tab2:checked ~ #content2,
-#tab3:checked ~ #content3,
-#tab4:checked ~ #content4 {
-    display: block;
+.tab-content.current{
+	display: inherit;
 }
