--- a/src/main/resources/static/css/Rank.css
+++ b/src/main/resources/static/css/Rank.css
@@ -37,3 +37,10 @@ ul.tables li.current{
 .tab-content.current{
 	display: inherit;
 }
+footer {
+    position:absolute;
+      bottom:15%;
+      width:100%;
+      height:10px;   /* Height of the footer */
+      background:#6cf;
+  }
