--- a/src/main/resources/static/css/Rank.css
+++ b/src/main/resources/static/css/Rank.css
@@ -3,10 +3,13 @@ body{
 	font-family: 'Trebuchet MS', serif;
 	line-height: 1.6
 }
-.Rankmain{
-	width: 500px;
-	margin: 0 auto;
+.content {
+	min-height: 80%;
 }
+.content-inside {
+	padding: 20px;
+	padding-bottom: 50px;
+  }
 
 
 
