--- a/src/main/resources/templates/dictionaryfav.html
+++ b/src/main/resources/templates/dictionaryfav.html
@@ -14,7 +14,7 @@
   </header>
   <!-- body 부분-->
   <body>
-	<script type="text/JavaScript" src="/js/RankService.js"></script>
+	<script type="text/JavaScript" src="/js/dicfav.js"></script>
 	
 	<br>
 	<br>
