--- a/src/main/resources/static/css/Rank.css
+++ b/src/main/resources/static/css/Rank.css
@@ -11,39 +11,126 @@ body{
 	padding-bottom: 50px;
   }
 
+  .center{
+	width: 30%;
+	margin-left: auto;
+	margin-right: auto;
+  }
 
-
-ul.tables{
-	margin: 0px;
-	padding: 0px;
-	list-style: none;
-}
-ul.tables li{
-	background: none;
-	color: #222;
+  ul {
+	justify-content: center;
+  }
+  
+  .container{
+	height: 80%;
+	width: 100%;
+	text-align: center;
+  }
+  
+  .total{
 	display: inline-block;
-	padding: 10px 15px;
-	cursor: pointer;
-}
-
-ul.tables li.current{
-	background: #ededed;
-	color: #222;
-}
-
-.tab-content{
-	display: none;
-	background: #ededed;
-	padding: 15px;
-}
-
-.tab-content.current{
-	display: inherit;
-}
-footer {
-    position:absolute;
-      bottom:15%;
-      width:100%;
-      height:10px;   /* Height of the footer */
-      background:#6cf;
+	vertical-align: middle;
+	padding: 300px 0px;
+  }
+  
+  table {
+	border-collapse:collapse;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	text-align: center;
+  }
+  th, td {
+	padding: 3px 10px;
+  }
+  
+  input {
+	text-align: center;
+  }
+  
+  .input-bar {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: fit-content;
+  }
+  
+  .input-bar-item {
+	display: table-cell;
+	text-align: center;
+  }
+  
+  .input-bar-item > button {
+	margin-left: 5px;
+  }
+  
+  .width100 {
+  width: 100%;
+  }
+  
+  .h1-item {
+	margin-top: 20px;
+	align-items: center;
+	text-align: center;
+	height: auto;
+  }
+  
+  .p-items {
+	align-items: center;
+	text-align: center;
+	height: auto;
+	color :#3a3a3a;
+  }
+  
+  .radiobutton {
+	margin-top: 20px;
+	text-align: center;
+  }
+  
+  .bd-example-modal-lg .modal-dialog{
+	/* display: table; */
+	position: relative;
+	margin: 0 auto;
+	top: calc(50% - 24px);
+  }
+  
+  /* .bd-example-modal-lg .modal-dialog .modal-content{
+	color: white;
+	background-color: transparent;
+	border: none;
+  } */
+  
+  #spinner:not([hidden]) {
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+  }
+  
+  #spinner::after {
+	content: "";
+	width: 100px;
+	height: 100px;
+	border: 10px solid #f3f3f3;
+	border-top: 10px solid #f25a41;
+	border-radius: 100%;
+	will-change: transform;
+	animation: spin 1s infinite linear
+  }
+  
+  @keyframes spin {
+	from {
+	  transform: rotate(0deg);
+	}
+	to {
+	  transform: rotate(360deg);
+	}
+  }
+  
+  .row{
+	text-align: center;
+	display: inline-block;
   }
