--- a/src/main/resources/templates/dictionary.html
+++ b/src/main/resources/templates/dictionary.html
@@ -59,16 +59,16 @@
 
             <div id="btn_group">
               <!-- 검색버튼을 누르면 ajaxPostDic() 을 실행한다. POSTapi.js 에 있음-->
-            <button  id="btn_2" type="button" onclick="ajaxPostDic()" >검색</button>
+            <button  id="btn_2" type="button" onclick="findWord()" >검색</button>
         </div>
             <div >
               <br>
               <!--사용자가 검색한 단어를 보여주는 곳-->
-                <h1 id="wordprint"></h1>
+                <h1 id="wordprint" style="font-size: 20px;" th:text="${userWord.word}"></h1>
             </div>
             <div >
               <!-- 사용자가 검색한 단어의 뜻을 보여주는 곳-->
-                <h1 id="wordprint2"></h1>
+                <h1 id="wordprint2"style="font-size: 20px;" th:text="${userWord.content}"></h1>
             </div>
      </form>
     </center>
@@ -80,8 +80,7 @@
         <!-- fragments폴더안에 module.html 에 있는 footer 가져오기-->
         <div th:replace="fragments/module.html :: footer"></div>
     </footer>
-
-    <script src="/js/Getapi.js" defer></script>
-    <script src="/js/POSTapi.js" defer></script>
+    <script type="text/JavaScript" src="/js/findword.js"></script>
+  
 </body>
 </html>
