--- a/src/main/resources/templates/dictionaryfav.html
+++ b/src/main/resources/templates/dictionaryfav.html
@@ -23,8 +23,8 @@
 		  <div class="radiobutton">
 			<div id = "btnGroup" class="btn-group btn-group-toggle" data-toggle="buttons">
 			  <label class="btn btn-info" id="Daily"><input type="radio" name="options" autocomplete="off" checked>Daily</label>
-			  <label class="btn btn-info" id="Week"><input type="radio" name="options" autocomplete="off">Weekly</label>
-			  <label class="btn btn-info" id="Month"><input type="radio" name="options" autocomplete="off">Monthly</label>
+			  <label class="btn btn-info" id="Weekly"><input type="radio" name="options" autocomplete="off">Weekly</label>
+			  <label class="btn btn-info" id="Monthly"><input type="radio" name="options" autocomplete="off">Monthly</label>
 			</div>
 		  </div>
 		  <div class="center">
